TrialoftheTitansPackage/main/default/objects/QC_Question__c/QC_Question__c.object-meta.xml
<CustomObject>
    <description>Pre-made question for QC Interviews.</description>
    <label>QC Question</label>
    <nameField>
        <label>QC Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>