TrialoftheTitansPackage/main/default/objects/QC_Question__c/fields/Expected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Expected_Answer__c</fullName>
    <label>Expected Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>