TrialoftheTitansPackage/main/default/objects/QC_Question__c/fields/QC_Question_Deck__c.field-meta.xml
<CustomField>
    <fullName>QC_Question_Deck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC Question Deck</label>
    <referenceTo>QC_Question_Deck__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>QC_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>