TrialoftheTitansPackage/main/default/objects/QC_Question__c/fields/Question_Body__c.field-meta.xml
<CustomField>
    <fullName>Question_Body__c</fullName>
    <label>Question Body</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>